--- a/contacto.html
+++ b/contacto.html
@@ -21,22 +21,12 @@
     <!-- Sección de Contacto -->
     <section class="contact">
         <h2>Contacto</h2>
-        <p>Déjanos un mensaje para contactarte.</p>
-
-        <form action="#" method="POST">
-            <input type="text" name="nombre" placeholder="Tu nombre" required>
-            <input type="tel" name="numero" placeholder="Tu telefono" required>
-            <input type="email" name="email" placeholder="Tu correo electrónico" required>
-            <textarea name="mensaje" rows="5" placeholder="Escribe tu mensaje aquí" required></textarea>
-            <button type="submit">Enviar Mensaje</button>
-        </form>
-
-        <!-- Redes Sociales -->
-        <div class="social-links">
-            <a href="https://www.facebook.com" target="_blank">Facebook</a>
-            <a href="https://x.com/" target="_blank">X/Twitter</a>
-            <a href="https://www.instagram.com" target="_blank">Instagram</a>
-        </div>
+        <p>Puedes ponerte en contacto por estos medios.</p>
+<ul>
+  <li><a href="https://wa.me/573014589504" target="_blank">WhatsApp</a></li>
+  <li><a href="mailto:yeramanosalva@gmail.com">yeramanosalva@gmail.com</a></li>
+  <li><a href="tel:+573249116169">+57 304 446 XXXX</a></li>
+</ul>
     </section>
 
     <footer>
