--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YeraMacr Service</title>
+    <title>Sobre mí</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">YeraMacr</div>
+        <div class="logo"><img src="IMG/FotoPerfil.png" alt="Foto de perfil" class="avatar"> YeraMacr</div>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -16,35 +16,26 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
+        <div class="about">
+        <h1>Sobre mí</h1>
+        <p>Soy Técnica en Programación de Software en formación continua, con experiencia en <strong>análisis de datos</strong> y <strong>automatización de procesos</strong>. 
+Actualmente sigo fortaleciendo mis conocimientos en <strong>Python, Java, SQL, Excel, Power BI y desarrollo web (HTML, CSS, JavaScript)</strong>. 
+Mi objetivo es aplicar la tecnología para resolver problemas reales con soluciones prácticas y eficientes.</p>
+    </div>
     </header>
-    <main>
-        <section class="hero">
-            <div class="hero-text">
-                <h1>SOLUCIONES EN INGENIERIA, SOFTWARE </h1>
-                <p>Cuando la tecnologia y las ideas van de la mano, ocurren cosa increbiles.</p>
-                <a href="#" class="btn">Más información</a>
-            </div>
-        </section>
-        <section class="features">
-            <div class="feature-box">
-                <h2>Industrial</h2>
-                <p>optimizacion de procesos, gestion de produccion y mejora continua</p>
-                <a href="#">Obtener más información</a>
-            </div>
-            <div class="feature-box">
-                <h2>Desarrollo de software</h2>
-                <p>creacion de aplicaciones web, automatizacion de procesos y analisis de datos</p>
-                <a href="#">Conoce más</a>
-            </div>
-            <div class="feature-box">
-                <h2>Automatizacion de procesos</h2>
-                <p>Implementacion de herramientas tecnologicas.</p>
-                <a href="#">Conoce más</a>
-            </div>
-        </section>
-    </main>
+<main>
+    <section id="analisis-datos" class="feature-box">
+        <h2>Análisis de Datos</h2>
+        <p>Transformo datos en información útil mediante recolección, limpieza, modelado y visualización. Elaboro métricas, reportes y paneles con Excel, Power BI y SQL para detectar patrones, medir resultados y respaldar decisiones.</p>
+    </section>
+
+    <section id="programacion-automatizacion-procesos" class="feature-box">
+        <h2>Programación y Automatización de Procesos con Software</h2>
+        <p>Desarrollo automatizaciones y utilidades con Python y Java para estandarizar tareas, generar reportes, procesar archivos CSV/Excel y consumir APIs REST. Aplico buenas prácticas de ingeniería,estructura modular, manejo de errores y registro de eventos para soluciones mantenibles, trazables y eficientes en el tiempo.</p>
+    </section>
+</main>    
     <footer>
-        <p>&copy; 2025 YeraMacr. Todos los derechos reservados. WHATSAPP 304 446 xx xx /p>
+        <p>&copy; 2025 YeraMacr. Todos los derechos reservados. WHATSAPP 3014589504 </p>
     </footer>
 </body>
 </html>
