--- a/servicios.html
+++ b/servicios.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <title>Servicios</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
 <header>
-    <h1>NUESTROS SERVICIOS</h1>
+    <div class="logo"><img src="IMG/FotoPerfil.png" alt="Foto de perfil" class="avatar"> YeraMacr</div>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -18,32 +17,37 @@
         </ul>
     </nav>
 </header>
-
 <section class="products">
-    <div class="product-box">
-        <img src="IMG/smart-industry-40-mangement-control-260nw-2525431689.webp" alt="Industrial">
-        <h2>Industrial</h2>
-        <p>optimizacion de procesos, gestion de produccion y mejora continua</p>
-        <a href="#">Ver más</a>
-    </div>
-
-    <div class="product-box">
-        <img src="IMG/mejores-herramientas-desarrollo-software.png" alt="Desarrollo de software">
-        <h2>Desarrollo de software</h2>
-        <p>creacion de aplicaciones web, automatizacion de procesos y analisis de datos.</p>
-        <a href="#">Ver más</a>
-    </div>
-
-    <div class="product-box">
-        <img src="IMG/automatizacion-de-procesos-software.webp" alt="Automatizacion de procesos">
-        <h2>Automatizacion de procesos</h2>
-        <p>Implementacion de herramientas tecnologicas.</p>
-        <a href="#">Ver más</a>
-    </div>
+  <div class="product-box">
+    <img src="IMG/smart-industry-40-mangement-control-260nw-2525431689.webp" alt="Dashboard de análisis de datos" loading="lazy" decoding="async">
+    <h2>Análisis de Datos</h2>
+    <p>Limpieza y transformación de datos, control de calidad, modelado y definición de KPI. Dashboards con Power BI, Excel avanzado y SQL para decisiones claras y accionables.</p>
+    <details>
+      <summary>Ver más</summary>
+      <h3>Proyectos: Dashboards</h3>
+      <p>Tableros ejecutivos con métricas clave, segmentaciones y filtros para seguimiento de desempeño.</p>
+      <img src="IMG/avocapp_dashboard_2025.png" alt="Ejemplo de dashboard" loading="lazy" decoding="async">
+    </details>
+  </div>
+  <div class="product-box">
+    <img src="IMG/mejores-herramientas-desarrollo-software.png" alt="Proyecto de desarrollo web" loading="lazy" decoding="async">
+    <h2> Desarrollo de software</h2>
+    <p>Aplicativos para optimizar flujo de trabajo y presentación de información.</p>
+    <details>
+      <summary>Ver más</summary>
+      <h3>Proyecto: Avocapp</h3>
+      <p>Aplicación en desarrollo para la gestión de inventario, ventas y reportes en el comercio mayorista de aguacate. Permite registrar entradas/salidas, generar reportes diarios y mostrar métricas visuales en paneles de control.</p>
+      <video controls width="100%" muted>
+        <source src="IMG/videos/Avocapp_video.mp4.mp4" type="video/mp4">
+      </video>
+       <video controls width="100%" muted>
+    <source src="IMG/videos/Avocapp_2video.mp4.mp4" type="video/mp4">
+  </video>
+    </details>
+  </div>
 </section>
-
 <footer>
-    <p>© 2025 YeraMacr. Todos los derechos reservados. WHATSAPP 304 446 XX XX</p>
+    <p>© 2025 YeraMacr. Todos los derechos reservados. WHATSAPP 304 446 14 72</p>
 </footer>
 
 </body>
