--- a/servicios.html
+++ b/servicios.html
@@ -38,10 +38,10 @@
       <h3>Proyecto: Avocapp</h3>
       <p>Aplicación en desarrollo para la gestión de inventario, ventas y reportes en el comercio mayorista de aguacate. Permite registrar entradas/salidas, generar reportes diarios y mostrar métricas visuales en paneles de control.</p>
       <video controls width="100%" muted>
-        <source src="IMG/videos/Avocapp_video.mp4.mp4" type="video/mp4">
+        <source src="IMG/Avocapp_video.mp4.mp4" type="video/mp4">
       </video>
        <video controls width="100%" muted>
-    <source src="IMG/videos/Avocapp_2video.mp4.mp4" type="video/mp4">
+    <source src="IMG/Avocapp_2video.mp4.mp4" type="video/mp4">
   </video>
     </details>
   </div>
@@ -51,4 +51,5 @@
 </footer>
 
 </body>
+
 </html>
